@@ -7,3 +7,4 @@
 ^vscode-install.r$
 ^benchmarks$
 ^CRAN-SUBMISSION$
+^LICENSE\.md$
