@@ -1,5 +1,5 @@
 Package: lfe
-Version: 2.9-1
+Version: 3.0.0.9000
 Title: Linear Group Fixed Effects
 Authors@R: c(person("Simen", "Gaure", role=c("aut"),
            comment=c(ORCID="https://orcid.org/0000-0001-7251-8747")),
@@ -25,13 +25,17 @@ Suggests:
     testthat
 VignetteBuilder: knitr
 ByteCompile: yes
-Description: Transforms away factors with many levels prior to doing an OLS.
-  Useful for estimating linear models with multiple group fixed effects, and for
-  estimating linear models which uses factors with many levels as pure control variables. See Gaure (2013) <doi:10.1016/j.csda.2013.03.024>
-  Includes support for instrumental variables, conditional F statistics for weak instruments,
-  robust and multi-way clustered standard errors, as well as limited mobility bias correction (Gaure 2014 <doi:10.1002/sta4.68>). 
-  WARNING: This package is NOT under active development anymore, no further improvements are to be expected, and the package is at risk of being removed from CRAN.
-License: Artistic-2.0
+Description: A parallelized implementation of the proposed methods by Gaure 
+  (2013) <doi:10.1016/j.csda.2013.03.024> and Gaure (2014) <doi:10.1002/sta4.68>
+  for OLS estimation of linear models with multiple high-dimensional category 
+  variables with correlation bias correction in two-way fixed-effects. It 
+  generalizes the within transformation to an arbitrary number of category 
+  variables. The approach, unlike other fast methods for solving such problems,
+  provides a covariance matrix for the remaining coefficients. The method is 
+  also useful for transforming away groups of pure control dummies. When doing 
+  two-way fixed-effects ordinary least squares estimations, both the variances 
+  and covariance of the fixed effects are biased.
+License: Apache License (>= 2)
 Classification/JEL: C13, C23, C60
 Classification/MSC: 62J05, 65F10, 65F50
 URL: https://github.com/MatthieuStigler/lfe
