@@ -220,15 +220,15 @@ halftrace <- function(x, f, restf, MFX, tol, lmean, name, weights = NULL) {
 
   if (is.null(MFX)) {
     invfun <- function(v) {
-      Crowsum(ww2 * demeanlist(v[f, ], restf, weights = w), f)
+      crowsum(ww2 * demeanlist(v[f, ], restf, weights = w), f)
     }
   } else {
     invfun <- function(v) {
-      Crowsum(ww2 * demeanlist(demeanlist(ww * v[f, ], MFX) / ww, restf, weights = w), f)
+      crowsum(ww2 * demeanlist(demeanlist(ww * v[f, ], MFX) / ww, restf, weights = w), f)
     }
   }
 
-  DtM1x <- Crowsum(ww * demeanlist(x, lmean, weights = weights, scale = FALSE), f)
+  DtM1x <- crowsum(ww * demeanlist(x, lmean, weights = weights, scale = FALSE), f)
   # we use absolute tolerance, mctrace wil give us a trtol.
   # however, we square our result:  (Rx + err)^2 = Rx^2 + 2*err*Rx + err^2
   # so to get 2*err*Rx < tol, we must have err < tol/(2*Rx), i.e.
@@ -298,12 +298,12 @@ varbias <- function(index, est, tol = 0.01, bvar, maxsamples = Inf,
       weights = w, scale = c(TRUE, FALSE)
     ))))
     invfun <- function(v) {
-      Crowsum(ww * demeanlist(demeanlist(ww * v[f, ], MFX), restf, weights = w, scale = FALSE), f)
+      crowsum(ww * demeanlist(demeanlist(ww * v[f, ], MFX), restf, weights = w, scale = FALSE), f)
     }
   } else {
     MFX <- NULL
     invfun <- function(v) {
-      Crowsum(ww * demeanlist(v[f, ], restf, weights = w, scale = c(TRUE, FALSE)), f)
+      crowsum(ww * demeanlist(v[f, ], restf, weights = w, scale = c(TRUE, FALSE)), f)
     }
   }
 
@@ -357,7 +357,7 @@ varbias <- function(index, est, tol = 0.01, bvar, maxsamples = Inf,
         result <- vector("numeric", ncol(Rx))
         for (i in 1:(2^d - 1)) {
           ia <- cia[[i]]
-          b <- Crowsum(Rx, ia)
+          b <- crowsum(Rx, ia)
           # odd number is positive, even is negative
           sgn <- 2 * (sum(as.logical(intToBits(i))[1:d]) %% 2) - 1
           adj <- sgn * dfadj * nlevels(ia) / (nlevels(ia) - 1)
@@ -376,7 +376,7 @@ varbias <- function(index, est, tol = 0.01, bvar, maxsamples = Inf,
         return(abs(nlev))
       }
       #      on.exit({rm(list=ls()); gc()})
-      DtM1x <- Crowsum(ww * demeanlist(unnamed(x), lmean, weights = w, scale = FALSE), f)
+      DtM1x <- crowsum(ww * demeanlist(unnamed(x), lmean, weights = w, scale = FALSE), f)
       # we use absolute tolerance, mctrace wil give us a trtol.
       # we divide by the L2-norm of DtM1x, since we take the
       # inner product with this afterwards
@@ -473,7 +473,7 @@ covbias <- function(index, est, tol = 0.01, maxsamples = Inf, resid, weights = N
     ))))
 
     invfun <- function(v) {
-      Crowsum(ww * demeanlist(demeanlist(ww * v[f2, ], MDX), no2list,
+      crowsum(ww * demeanlist(demeanlist(ww * v[f2, ], MDX), no2list,
         weights = w, scale = FALSE
       ), f2)
     }
@@ -494,13 +494,13 @@ covbias <- function(index, est, tol = 0.01, maxsamples = Inf, resid, weights = N
     }
   } else {
     invfun <- function(v) {
-      Crowsum(ww2 * demeanlist(v[f2, ], no2list, weights = w), f2)
+      crowsum(ww2 * demeanlist(v[f2, ], no2list, weights = w), f2)
     }
     MXfun <- function(v) ww2 * demeanlist(v[f1, ], restf, weights = w)
   }
 
   invfunX <- function(v) {
-    Crowsum(MXfun(v), f1)
+    crowsum(MXfun(v), f1)
   }
 
   if (robust) {
@@ -549,8 +549,8 @@ covbias <- function(index, est, tol = 0.01, maxsamples = Inf, resid, weights = N
         # it's one or more clusters, do the Cameron et al detour
         result <- vector("numeric", ncol(Rx))
         for (i in 1:(2^d - 1)) {
-          Lb <- Crowsum(Lx, cia[[i]])
-          Rb <- Crowsum(Rx, cia[[i]])
+          Lb <- crowsum(Lx, cia[[i]])
+          Rb <- crowsum(Rx, cia[[i]])
           # odd number is positive, even is negative
           sgn <- 2 * (sum(as.logical(intToBits(i))[1:d]) %% 2) - 1
           result <- result + sgn * colSums(Lb * Rb)
@@ -567,12 +567,12 @@ covbias <- function(index, est, tol = 0.01, maxsamples = Inf, resid, weights = N
       }
       #      on.exit({rm(list=ls()); gc()})
       M1x <- ww * demeanlist(unnamed(x), lmean, weights = w, scale = FALSE)
-      DtM1x <- Crowsum(M1x, f1)
-      FtM1x <- Crowsum(M1x, f2)
+      DtM1x <- crowsum(M1x, f1)
+      FtM1x <- crowsum(M1x, f2)
       d1 <- colSums(DtM1x^2)
       d2 <- colSums(FtM1x^2)
       v <- cgsolve(invfunX, DtM1x, eps = -trtol / sqrt(d1 + d2) / 3, name = name)
-      MXv <- Crowsum(MXfun(v), f2)
+      MXv <- crowsum(MXfun(v), f2)
       sol <- cgsolve(invfun, FtM1x, eps = -trtol / sqrt(colSums(MXv^2)) / 3, name = name)
       -colSums(sol * MXv)
     }
@@ -616,7 +616,7 @@ varvar <- function(index, fe, X, pointest, resvar, tol = 0.01,
   if (length(X) == 0) {
     MFX <- fe[-index]
     invfun <- function(x) {
-      Crowsum(ww2 * demeanlist(x[f, ], MFX, weights = w), f)
+      crowsum(ww2 * demeanlist(x[f, ], MFX, weights = w), f)
     }
   } else {
     #    M_{F,X} = M_F M_{M_F X}
@@ -625,13 +625,13 @@ varvar <- function(index, fe, X, pointest, resvar, tol = 0.01,
       x = orthonormalize(ww * demeanlist(X, restf, weights = w))
     ))
     invfun <- function(x) {
-      Crowsum(ww2 * demeanlist(demeanlist(ww * x[f, ], MFX) / ww, restf, weights = w), f)
+      crowsum(ww2 * demeanlist(demeanlist(ww * x[f, ], MFX) / ww, restf, weights = w), f)
     }
   }
 
 
   Dtheta <- pointest[f]
-  DtM1D <- Crowsum(ww2 * demeanlist(Dtheta, lmean, weights = w), f)
+  DtM1D <- crowsum(ww2 * demeanlist(Dtheta, lmean, weights = w), f)
   v <- cgsolve(invfun, DtM1D, eps = tol / 4 / resvar / sqrt(sum(DtM1D^2)), name = name)
   meanpart <- 4 * resvar * sum(DtM1D * v)
   if (!biascorrect) {
@@ -643,7 +643,7 @@ varvar <- function(index, fe, X, pointest, resvar, tol = 0.01,
   #  message('mean part=',meanpart/N^2)
   mytol <- meanpart / 10
   trfun <- function(x, trtol) {
-    v <- ww * demeanlist(cgsolve(invfun, Crowsum(ww2 * demeanlist(x, lmean, weights = w), f),
+    v <- ww * demeanlist(cgsolve(invfun, crowsum(ww2 * demeanlist(x, lmean, weights = w), f),
       eps = -mytol^2 / resvar^2 / 2, name = name
     )[f, ], lmean, weights = w)
     colSums(v * x)
