@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/MatthieuStigler/lfe/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/MatthieuStigler/lfe/actions/workflows/R-CMD-check.yaml)
+[![R-CMD-check](https://github.com/pachadotdev/lfe/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/pachadotdev/lfe/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The goal of lfe is to speed up the estimation of linear models with large fixed
